--- a/src/Ldc/SliderImageBundle/Resources/config/routing_admin.yml
+++ b/src/Ldc/SliderImageBundle/Resources/config/routing_admin.yml
@@ -6,9 +6,9 @@ ldcsliderimagebundle_edit:
     pattern: /edit/{id}
     defaults: { _controller: LdcSliderImageBundle:SliderImageAdmin:edit}
 
-ldcsliderimagebundle_index:
+ldcsliderimagebundle_list:
     pattern: /
-    defaults: { _controller: LdcSliderImageBundle:SliderImageAdmin:index}
+    defaults: { _controller: LdcSliderImageBundle:SliderImageAdmin:list}
 
 ldcsliderimagebundle_confirmed:
     pattern: /confirmed
