--- a/src/Ldc/ArticleBundle/Resources/config/routing_admin.yml
+++ b/src/Ldc/ArticleBundle/Resources/config/routing_admin.yml
@@ -10,9 +10,9 @@ ldcarticlebundle_delete:
     pattern: /delete/{id}
     defaults: { _controller: LdcArticleBundle:ArticleAdmin:delete}
 
-ldcarticlebundle_list:
-    pattern: /list
-    defaults: { _controller: LdcArticleBundle:ArticleAdmin:list}
+ldcarticlebundle_index:
+    pattern: /
+    defaults: { _controller: LdcArticleBundle:ArticleAdmin:index}
     
 ldcarticlebundle_confirmed:
     pattern: /confirmed
