--- a/src/Ldc/WebsiteBundle/Resources/config/services.yml
+++ b/src/Ldc/WebsiteBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@ parameters:
 #    ldc_website.example.class: Ldc\WebsiteBundle\Example
 
 services:
-#    ldc_website.example:
-#        class: %ldc_website.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    ldc_website_extension:
+        class: Ldc\WebsiteBundle\Twig\Extensions\LdcWebsiteExtension
+        tags:
+            -  { name: twig.extension }
